add detail to readme